--- a/mypkg/magit/.gitignore
+++ b/mypkg/magit/.gitignore
@@ -1,6 +1,5 @@
 *.elc
 *~
-/*.el
 /*.tar
 /*.tar.gz
 /.dir-locals.el
@@ -8,4 +7,4 @@
 /Documentation/dir
 /config.mk
 /lisp/magit-autoloads.el
-/lisp/magit-version.el
+lisp/magit-version.el
